apj/cluster/opa/opa-cluster.yaml
---
# Source: opa/templates/webhookconfiguration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-fgd-apa
  annotations:
  labels:
    app: opa-fgd-apa
    chart: "opa-1.14.4"
    release: "opa-fgd-apa"
    heritage: "Helm"
webhooks:
  - name: webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore

    failurePolicy: Ignore
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - '*'
        resources:
        - '*'
    clientConfig:


      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURBekNDQWV1Z0F3SUJBZ0lSQUtlQ3FpYngwV3BGMUZKRnNrVVlXbTR3RFFZSktvWklodmNOQVFFTEJRQXcKR3pFWk1CY0dBMVVFQXhNUWIzQmhMV0ZrYldsemMybHZiaTFqWVRBZUZ3MHlNREE1TWpFeE5URXhNekJhRncwegpNREE1TVRreE5URXhNekJhTUJzeEdUQVhCZ05WQkFNVEVHOXdZUzFoWkcxcGMzTnBiMjR0WTJFd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDMnBYYjB6OHhpaEZYcG0zQWd2amFuczFOTDg4WXcKYjUzOVN2N0RuUFY1bmNncGpzanNLYlNVTUliL2poYnRoam83WU50eDU2bFdvdndraldiaGJFbUJXQi9mN0wxUQpiakFjZFlzZ3Ri [...]


      service:
        name: opa-fgd-apa
        namespace: default
    sideEffects: Unknown
